--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ body {
 <script>
     // Ambil nama tamu dari URL
     const urlParams = new URLSearchParams(window.location.search);
-    const guestName = urlParams.get('to') || 'Tamu Undangan';
+    const guestName = urlParams.get('to') || 'Aris';
     document.querySelector('.guest-name').innerText = guestName;
 
     // Countdown
@@ -198,3 +198,4 @@ body {
 
 </body>
 </html>
+
