--- a/tes.html
+++ b/tes.html
@@ -391,7 +391,7 @@
     </div>
   </section>
 
-  <!-- UCAPAN -->
+  <!-- UCAPAN 
   <section id="ucapan" class="page">
     <div class="section-title fade-up"><h2>Kirim Ucapan & Doa</h2></div>
     <div class="card form-card slide-up">
@@ -408,7 +408,7 @@
       </form>
     </div>
     <div class="wishes-container" id="wishesContainer"></div>
-  </section>
+  </section> -->
 
 </main>
 
@@ -417,7 +417,7 @@
   <a href="#home" class="nav-link active"><i class='bx bx-home'></i><span>Home</span></a>
   <a href="#acara" class="nav-link"><i class='bx bx-calendar'></i><span>Acara</span></a>
   <a href="#galeri" class="nav-link"><i class='bx bx-camera'></i><span>Galeri</span></a>
-  <a href="#ucapan" class="nav-link"><i class='bx bx-message'></i><span>Ucapan</span></a>
+  <!--<a href="#ucapan" class="nav-link"><i class='bx bx-message'></i><span>Ucapan</span></a>-->
 </div>
 
 <script>
@@ -520,3 +520,4 @@
 
 </body>
 </html>
+
