--- a/tes.html
+++ b/tes.html
@@ -352,8 +352,8 @@
     <div class="card slide-left">
       <h3><i class='bx bx-heart'></i> Akad Nikah</h3>
       <p><strong>Kamis, 25 September 2025</strong></p>
-      <p>Pukul 08:00 WIB - Selesai</p>
-      <p>Rumah Mempleai Pria</p>
+      <p>Pukul 09:00 WIB - Selesai</p>
+      <p>Rumah Mempelai Pria</p>
     </div>
     <!--  
     <div class="card slide-right">
@@ -519,5 +519,6 @@
 
 </body>
 </html>
+
 
 
