--- a/tes.html
+++ b/tes.html
@@ -350,7 +350,7 @@
   <section id="acara" class="page">
     <div class="section-title fade-up"><h2>Detail Acara</h2></div>
     <div class="card slide-left">
-      <h3><i class='bx bx-heart'></i> Akad Nikah</h3>
+      <h3><i class='bx bx-heart'></i> Resepsi Pernikahan</h3>
       <p><strong>Kamis, 25 September 2025</strong></p>
       <p>Pukul 09:00 WIB - Selesai</p>
       <p>Rumah Mempelai Pria</p>
@@ -519,6 +519,7 @@
 
 </body>
 </html>
+
 
 
 
