--- a/tes.html
+++ b/tes.html
@@ -267,7 +267,7 @@
 
 <div id="music-control" class="music-control"><i class='bx bx-music'></i></div>
 <audio id="background-music" loop>
-  <source src="lagu.mp3" type="audio/mpeg">
+  <source src="laguu.mpeg" type="audio/mpeg">
   Browser Anda tidak mendukung elemen audio.
 </audio>
   <script>
@@ -519,6 +519,7 @@
 
 </body>
 </html>
+
 
 
 
