--- a/tes.html
+++ b/tes.html
@@ -296,6 +296,7 @@
     <div class="intro-text fade-up">
       <p class="glow-text">The Wedding Of</p>
       <h1 class="zoom-in">Agus &</h1>
+      <h1 class="zoom-in">&</h1>
       <h1 class="zoom-in">Yuni</h1>
       <p class="fade-left">Kamis, 25 September 2025</p>
     </div>
@@ -519,6 +520,7 @@
 
 </body>
 </html>
+
 
 
 
