--- a/tes.html
+++ b/tes.html
@@ -295,7 +295,7 @@
   <section id="home" class="page">
     <div class="intro-text fade-up">
       <p class="glow-text">The Wedding Of</p>
-      <h1 class="zoom-in">Agus &</h1>
+      <h1 class="zoom-in">Agus</h1>
       <h1 class="zoom-in">&</h1>
       <h1 class="zoom-in">Yuni</h1>
       <p class="fade-left">Kamis, 25 September 2025</p>
@@ -520,6 +520,7 @@
 
 </body>
 </html>
+
 
 
 
